<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottom_sheet_image_details"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background2"
    android:elevation="8dp"
    android:padding="8dp"
    app:behavior_peekHeight="114dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:divider="@drawable/divider_empty"
        android:showDividers="middle" >

        <!-- 114dp = halfway between 100dp and 128dp -->

        <!-- Visual cue: "This sheet is draggable"
                4dp bottom margin = extra space above the title
            -->
        <View
            android:layout_width="32dp"
            android:layout_height="4dp"
            android:layout_gravity="center"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/listDivider" />

        <TextView
            android:id="@+id/info_filename"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/placeholder_card_details"
            android:textAlignment="center"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="@drawable/divider_empty"
            android:showDividers="middle">

            <ImageButton
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_action_delete"
                android:contentDescription="@string/action_delete"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <ImageButton
                android:id="@+id/btn_favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_favorite"
                android:contentDescription="@string/action_favorite"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <ImageButton
                android:id="@+id/btn_edit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_action_edit"
                android:contentDescription="@string/action_edit"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <ImageButton
                android:id="@+id/btn_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_action_share"
                android:contentDescription="@string/action_share"
                style="@style/Widget.AppCompat.Button.Borderless" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:divider="@drawable/divider_empty"
            android:showDividers="middle">

            <ImageButton
                android:id="@+id/btn_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_action_copy"
                android:contentDescription="@string/action_copy"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <ImageButton
                android:id="@+id/btn_move"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_action_move"
                android:contentDescription="@string/action_move"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <ImageButton
                android:id="@+id/btn_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_action_location"
                android:contentDescription="@string/action_location"
                style="@style/Widget.AppCompat.Button.Borderless" />

            <ImageButton
                android:id="@+id/btn_wallpaper"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:src="@drawable/ic_action_wallpaper"
                android:contentDescription="@string/action_wallpaper"
                style="@style/Widget.AppCompat.Button.Borderless" />

        </LinearLayout>

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="?android:attr/listDivider" />

        <!-- GridLayout gap: https://stackoverflow.com/a/53421508 -->
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:useDefaultMargins="true"
            android:columnCount="2">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/info_location" />

            <TextView
                android:id="@+id/info_location"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_columnWeight="2"
                android:textAlignment="textEnd"
                android:text="@string/placeholder_card_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/info_timestamp" />

            <TextView
                android:id="@+id/info_timestamp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_columnWeight="2"
                android:textAlignment="textEnd"
                android:text="@string/placeholder_card_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/info_resolution" />

            <TextView
                android:id="@+id/info_resolution"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_columnWeight="2"
                android:textAlignment="textEnd"
                android:text="@string/placeholder_card_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/info_file_size" />

            <TextView
                android:id="@+id/info_file_size"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_columnWeight="2"
                android:textAlignment="textEnd"
                android:text="@string/placeholder_card_details" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:textStyle="bold"
                android:text="@string/info_file_path" />

            <TextView
                android:id="@+id/info_file_path"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16sp"
                android:layout_columnWeight="2"
                android:textAlignment="textEnd"
                android:text="@string/placeholder_card_details" />

        </GridLayout>

    </LinearLayout>

</FrameLayout>
