<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bdrawer_secure"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:background="@color/background2"
    android:elevation="8dp"
    app:behavior_peekHeight="@dimen/bdrawer_peek_height"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- DRAGGABLE SHEET HINT -->
    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center"
        android:background="?android:attr/listDivider" />

    <!-- NAVBAR + EXPAND SHEET BUTTON -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bdrawer_toolbar_height"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageButton
            android:id="@+id/btn_close_secret"
            android:background="@drawable/ripple_rect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_back"
            android:tooltipText="@string/btn_secret_album_exit"
            android:onClick="closeSecret" />

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.TextButton"
            android:background="@drawable/ripple_rect"
            android:id="@+id/btn_bottom_sheet_expand"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="4"
            app:iconGravity="textStart"
            app:icon="@drawable/ic_bdrawer_up"
            android:text="Secret album options"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/divider"
        android:paddingBottom="@dimen/divider"
        android:paddingLeft="@dimen/divider_large"
        android:paddingRight="@dimen/divider_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdrawer_header_viewmode"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/viewmode_secret"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_secret_list"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_list" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_secret_grid_3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_3"
                app:icon="@drawable/ic_view_grid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_secret_grid_4"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_4"
                app:icon="@drawable/ic_view_grid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_secret_grid_5"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_5"
                app:icon="@drawable/ic_view_grid" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

        <View android:layout_width="match_parent" android:layout_height="@dimen/divider_large" />

        <TextView
            android:id="@+id/bottom_sheet_settings_hint"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdrawer_secret_header_more"
            android:textAlignment="center"
            android:paddingBottom="4dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_secret_album_change_password"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            app:icon="@drawable/ic_secret_passcode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_secret_album_passcode" />

    </LinearLayout>

</LinearLayout>
