<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bdrawer_image_list_standalone"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    android:background="@color/background2"
    android:elevation="8dp"
    app:behavior_peekHeight="@dimen/bdrawer_peek_height"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- DRAGGABLE SHEET HINT -->
    <View
        android:layout_width="32dp"
        android:layout_height="4dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        android:layout_gravity="center"
        android:background="?android:attr/listDivider" />

    <!-- NAVBAR + EXPAND SHEET BUTTON -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bdrawer_toolbar_height"
        android:orientation="horizontal"
        android:weightSum="5">

        <ImageButton
            android:id="@+id/btn_close"
            android:background="@drawable/ripple_rect"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_back"
            android:tooltipText="@string/btn_secret_album_exit"
            android:onClick="btnCloseCollection" />

        <TextView
            android:id="@+id/collection_name"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="3"
            android:gravity="center"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
            tools:text="Collection name" />

        <ImageButton
            android:background="@drawable/ripple_rect"
            android:id="@+id/btn_bottom_sheet_expand"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:src="@drawable/ic_bdrawer_up"
            />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="@dimen/divider"
        android:paddingBottom="@dimen/divider"
        android:paddingLeft="@dimen/divider_large"
        android:paddingRight="@dimen/divider_large"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/bdrawer_header_viewmode"
            android:paddingBottom="4dp"
            android:textAlignment="center"
            android:textStyle="bold" />

        <com.google.android.material.button.MaterialButtonToggleGroup
            android:id="@+id/viewmode_all"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:selectionRequired="true"
            app:singleSelection="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_all_list"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_list" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_all_grid_3"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_3"
                app:icon="@drawable/ic_view_grid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_all_grid_4"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_4"
                app:icon="@drawable/ic_view_grid" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_viewmode_all_grid_5"
                style="?attr/materialButtonOutlinedStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/bdrawer_viewmode_grid_5"
                app:icon="@drawable/ic_view_grid" />
        </com.google.android.material.button.MaterialButtonToggleGroup>

    </LinearLayout>

</LinearLayout>
